# rustshootergame

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  MAP_FORMAT.md  README.md  build.rs  example_server_config.toml  rust-analyzer.toml
.github/workflows/: build-and-release.yml  release.yml
flatpak/: io.github.panmourovaty.rustshootergame.yml
src/: app.rs  components.rs  connect_screen.rs  game.rs  input.rs  lib.rs  main.rs  map.rs  map_loader.rs  networking.rs  physics.rs  player.rs  pvp.rs  server_main.rs  settings_screen.rs  shooting.rs  ui.rs  weapon.rs
src/fps_controller/: camera.rs  character.rs  mod.rs
src/network/: client.rs  mod.rs  protocol.rs  server.rs
web/: _headers  index.html  server.txt
