[package]
name = "rustshootergame"
version = "0.1.0"
edition = "2021"
description = "A Counter Strike inspired FPS game built with Bevy"
license = "MIT"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"

[features]
default = ["networking"]
networking = ["dep:lightyear"]
# WASM / web build: enables WebGL 2 rendering, disables networking (UDP is not
# available in browsers).  Build with:
#   cargo build --target wasm32-unknown-unknown --bin client \
#               --no-default-features --features web --release
web = [
    "bevy/webgl2",
    "bevy/3d",
    "bevy/mouse",
    "bevy/keyboard",
    "bevy/default_font",
]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "3d",         # full 3D: rendering, lighting, audio, UI, state, logging, winit
    "mouse",      # Bevy 0.18: mouse input is an explicit feature
    "keyboard",   # Bevy 0.18: keyboard input is an explicit feature
    "default_font",
] }
avian3d = "0.5"
lightyear = { version = "0.26", features = ["udp", "client", "server", "netcode"], optional = true }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# WASM release: smaller binary, no debug info.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
