[package]
name = "rustshootergame"
version = "0.1.0"
edition = "2021"
description = "A Counter Strike inspired FPS game built with Bevy"
license = "MIT"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"

[features]
default = ["networking"]
# Native builds: UDP + WebTransport (server listens on both; native client uses UDP).
# Use the `server` feature for server-only builds (omits client game logic modules).
server = ["networking"]
networking = [
    "dep:lightyear",
    "dep:aeronet_webtransport",
    "lightyear/udp",
    "lightyear/webtransport",
    "lightyear/webtransport_self_signed",
    "lightyear/client",
    "lightyear/server",
    "lightyear/netcode",
]
# WASM / web build: WebTransport only (no UDP, no server).
# Build with:
#   cargo build --target wasm32-unknown-unknown --bin client \
#               --no-default-features --features web --release
#
# Required environment variables for the WASM build:
#   RSG_CERT_DIGEST   SHA-256 fingerprint of the server's self-signed cert
#                     (printed by the server on startup). Leave unset when
#                     using a CA-signed certificate.
web = [
    "bevy/webgl2",
    "bevy/3d",
    "bevy/mouse",
    "bevy/keyboard",
    "bevy/default_font",
    "dep:lightyear",
    "lightyear/webtransport",
    "lightyear/webtransport_self_signed",
    "lightyear/client",
    "lightyear/netcode",
]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "3d",
    "mouse",
    "keyboard",
    "default_font",
] }
avian3d = { version = "0.5", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "xpbd_joints",
    "parallel",
] }
lightyear = { version = "0.26", optional = true }
aeronet_webtransport = { version = "0.19", optional = true }
# getrandom needs the "js" feature to compile for wasm32-unknown-unknown,
# so it can use the browser's crypto.getRandomValues() API.
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Used to read window.__RSG_SERVER_ADDR__ set by index.html from server.txt.
js-sys = "0.3"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# WASM release: smaller binary, no debug info.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
