[package]
name = "rustshootergame"
version = "0.1.0"
edition = "2021"
description = "A Counter Strike inspired FPS game built with Bevy"
license = "MIT"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"
required-features = ["server"]

[features]
default = ["networking"]
# Native builds: UDP + WebTransport (server listens on both; native client uses UDP).
# Use the `server` feature for server-only builds (omits client game logic modules).
server = ["networking"]
networking = [
    "dep:lightyear",
    "dep:aeronet_webtransport",
    "lightyear/std",
    "lightyear/udp",
    "lightyear/webtransport",
    "lightyear/webtransport_self_signed",
    "lightyear/client",
    "lightyear/server",
    "lightyear/netcode",
]
# WASM / web build: WebTransport only (no UDP, no server).
# Build with:
#   cargo build --target wasm32-unknown-unknown --bin client \
#               --no-default-features --features web --release
#
# Required environment variables for the WASM build:
#   RSG_CERT_DIGEST   SHA-256 fingerprint of the server's self-signed cert
#                     (printed by the server on startup). Leave unset when
#                     using a CA-signed certificate.
web = [
    "bevy/webgpu",
    "bevy/web",
    "bevy/default_app",
    "bevy/bevy_winit",
    "bevy/3d_bevy_render",
    "bevy/ui_bevy_render",
    "bevy/bevy_ui_widgets",
    "bevy/scene",
    "bevy/mouse",
    "bevy/keyboard",
    "bevy/default_font",
    "dep:lightyear",
    "lightyear/std",
    "lightyear/webtransport",
    "lightyear/webtransport_self_signed",
    "lightyear/client",
    "lightyear/netcode",
    # Direct access to aeronet types needed for the WASM hostname-URL transport path.
    "dep:lightyear_aeronet",
    "dep:aeronet_webtransport",
    "aeronet_webtransport/client",
]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "std",
    "multi_threaded",
    "default_app",
    "bevy_winit",
    "x11",
    "bevy_clipboard",
    "custom_cursor",
    "sysinfo_plugin",
    "3d_bevy_render",
    "ui_bevy_render",
    "bevy_ui_widgets",
    "scene",
    "mouse",
    "keyboard",
    "default_font",
    "webp",
] }
avian3d = { version = "0.7", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "collider-from-mesh",
    "xpbd_joints",
    "parallel",
] }
lightyear = { version = "0.28", optional = true, default-features = false }
aeronet_webtransport = { version = "0.21", optional = true }
lightyear_aeronet = { version = "0.28", optional = true, default-features = false }
# getrandom needs the "js" feature to compile for wasm32-unknown-unknown,
# so it can use the browser's crypto.getRandomValues() API.
serde = { version = "1", features = ["derive"] }

# Map archive loading - pure Rust, compile on all targets.
ruzstd = "0.8"
tar = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Blocking HTTPS client used to download map archives on a background thread.
ureq = { version = "3", features = ["rustls", "platform-verifier"] }
# Minimal tokio runtime used to drive the async Identity::load_pemfiles call
# when the server loads TLS cert/key from disk.
tokio = { version = "1", features = ["rt"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
# TOML parser for the server configuration file.
toml = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Used to read window.__RSG_SERVER_ADDR__ set by index.html from server.txt.
js-sys = "0.3"
wasm-bindgen = "0.2"
# Async HTTPS fetch for map archive download in the browser.
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.4", features = ["wasm_js"] }
# Transitive dependency (via rand_core v0.6 → lightyear_netcode) still uses
# getrandom v0.2, which needs the "js" feature for wasm32-unknown-unknown.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Response", "WorkerGlobalScope"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# WASM release: smaller binary, no debug info.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
